--- a/app/views/competencies/index.html.erb
+++ b/app/views/competencies/index.html.erb
@@ -17,7 +17,7 @@
         <td><%= competency.label %></td>
         <td><%= competency.teaching_module_id %></td>
         <td><%= link_to 'Show', competency %></td>
-        <td><%= link_to 'Edit', edit_competency_path(competency) %></td>
+        <td><%= link_to 'Edit', edit_competency_path(competency) if can? :edit, competency %></td>
       </tr>
     <% end %>
   </tbody>
