--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -5,4 +5,4 @@
   <%= @job.label %>
 </p>
 
-<%= link_to 'Edit', edit_job_path(@job) %> 
+<%= link_to 'Edit', edit_job_path(@job) if can? :edit, @job %> 
