--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,13 +1,23 @@
 <%= semantic_form_for @user do |f| %>
   <%= f.inputs do %>
-    <%= f.input :first_name %>
-    <%= f.input :last_name %>
-    <%= f.input :hours %>
-    <%= f.input :public, label: 'Fonctionnaire' %>
-    <%= f.input :tenured, label: 'Titulaire' %>
-    <%= f.input :teaching_modules, as: :check_boxes, label: 'Responsable des modules' %>
-    <%= f.input :projects, as: :check_boxes, label: 'Impliqué(e) dans les projets' %>
-    <%= f.input :fields, as: :check_boxes, collection: Field.not_root, label: 'Champs' %>
+    <div class="row">
+      <div class="col-md-4">
+        <%= f.input :email, as: :email %>
+        <%= f.input :first_name %>
+        <%= f.input :last_name %>
+        <%= f.input :admin if current_user.admin? %>
+        <%= f.input :hours %>
+        <%= f.input :public %>
+        <%= f.input :tenured %>
+      </div>
+      <div class="col-md-4">
+        <%= f.input :teaching_modules, as: :check_boxes %>
+      </div>
+      <div class="col-md-4">
+        <%= f.input :fields, as: :check_boxes, collection: Field.not_root %>
+        <%= f.input :projects, as: :check_boxes %>
+      </div>
+    </div>
   <% end %>
-  <%= f.actions %>
+  <%= f.submit 'Enregistrer', class: 'btn btn-default' %>
 <% end %>
