--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <p><%= @users.count %> personnes</p>
-<%= link_to 'Nouvelle personne', new_user_path %>
+<%= link_to 'Nouvelle personne', new_user_path if can? :create, User %>
 
 <table class="table table-hover">
   <thead>
@@ -9,10 +9,6 @@
       <th>Responsable des modules</th>
       <th>Champs</th>
       <th>Projets</th>
-      <th>Heures enseignant</th>
-      <th>Heures étudiant</th>
-      <th>Service</th>
-      <th>Sous-service ?</th>
     </tr>
   </thead>
   <tbody>
@@ -23,10 +19,6 @@
         <td><%= render partial: 'teaching_modules/inline_list', locals: {teaching_modules: user.teaching_modules} %></td>
         <td><%= render partial: 'fields/inline_list', locals: {fields: user.fields} %></td>
         <td><%= render partial: 'projects/inline_list', locals: {projects: user.projects} %></td>
-        <td><%= user.teacher_hours %></td>
-        <td><%= user.student_hours %></td>
-        <td><%= user.hours %></td>
-        <td><%= user.hours_filled? ? 'non' : 'oui' %></td>
       </tr>
     <% end %>
   </tbody>
