--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,58 @@
-<%= link_to 'Edit', edit_user_path(@user) %>
+<%= link_to 'Edit', edit_user_path(@user) if can? :edit, @user %>
 
 <h2>Heures</h2>
 <p><%= @user.teacher_hours %> heures enseignant / <%= @user.hours %> heures de service</p>
-<%= link_to 'Planifier un module', new_involvement_path(user_id: @user.id) %>
-<%= render partial: 'involvements/table', locals: {involvements: @user.involvements} %>
+<%= link_to 'Planifier un module', new_involvement_path(user_id: @user.id) if can? :create, Involvement %>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Semestre</th>
+      <th>Code module</th>
+      <th>Nom module</th>
+      <th>Heures étudiant total</th>
+      <th>CM</th>
+      <th>TD</th>
+      <th>TP</th>
+      <th>Heures enseignant</th>
+      <th>Note</th>
+      <th>Projet</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+  <% @user.involvements.includes(:teaching_module).reorder('teaching_modules.semester_id').each do |involvement| %>
+    <tr>
+      <td><%= link_to involvement.teaching_module.semester, involvement.teaching_module.semester %></td>
+      <td><%= link_to involvement.teaching_module, involvement.teaching_module %></td>
+      <td><%= link_to involvement.teaching_module.label, involvement.teaching_module %></td>
+      <td><%= involvement.student_hours %></td>
+      <td><%= involvement.hours_cm %></td>
+      <td><%= involvement.hours_td %></td>
+      <td><%= involvement.hours_tp %></td>
+      <td><%= involvement.teacher_hours %></td>
+      <td><%= simple_format involvement.description %></td>
+      <td><%= link_to involvement.project, involvement.project unless involvement.project.nil? %></td>
+      <td><%= link_to 'Edit', edit_involvement_path(involvement), class: 'btn btn-primary btn-xs' if can? :edit, involvement%></td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
 
-<h2>Champs</h2>
-<%= render partial: 'fields/inline_list', locals: {fields: @user.fields} %>
-
-<h2>Responsable des projets</h2>
-<%= render partial: 'projects/inline_list', locals: {projects: @user.projects_managed} %>
-
-<h2>Projets</h2>
-<%= render partial: 'projects/inline_list', locals: {projects: @user.projects} %>
-
-<h2>Responsable des modules</h2>
-<%= render partial: 'teaching_modules/table', locals: {teaching_modules: @user.teaching_modules} %>
+<div class="row">
+  <div class="col-md-3"> 
+    <h2>Champs</h2>
+    <%= render partial: 'fields/inline_list', locals: {fields: @user.fields} %>
+  </div>
+  <div class="col-md-3"> 
+    <h2>Responsable modules</h2>
+    <%= render partial: 'teaching_modules/inline_list', locals: {teaching_modules: @user.teaching_modules} %>
+  </div>
+  <div class="col-md-3"> 
+    <h2>Responsable projets</h2>
+    <%= render partial: 'projects/inline_list', locals: {projects: @user.projects_managed} %>
+  </div>
+  <div class="col-md-3"> 
+    <h2>Projets</h2>
+    <%= render partial: 'projects/inline_list', locals: {projects: @user.projects} %>
+  </div>
+</div>
