--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,3 +1,10 @@
 <footer>
-	Version 1.5 Zelda Breath Of The Wild
+  <div class="logo logo-black">
+    <%= image_tag 'mmi-bordeaux.png' %>
+    <p>Admin</p>
+  </div>
+  <p class="version">
+	  <strong>Version 1.5</strong><br/>
+    Zelda Breath Of The Wild
+  </p>
 </footer>
