--- a/app/views/dashboard/_admin.html.erb
+++ b/app/views/dashboard/_admin.html.erb
@@ -1,4 +1,4 @@
-<h2>Synthèse maquette</h2>
+<h2>Synthèse de la maquette</h2>
 <div class="row">
   <% @semesters.each do |semester| %>
     <div class="col-md-3">
@@ -31,3 +31,5 @@
     </div>
   <% end %>
 </div>
+
+<hr class="spacer">
