--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_include_tag "application" %>
   </head>
   <body class="devise">
-    <div class="logo">
+    <div class="logo logo-black">
       <%= image_tag 'mmi-bordeaux.png' %>
       <p>Admin</p>
     </div>
