--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -14,6 +14,15 @@ ul
   list-style-position: inside
   padding-left: 0
 
+.text-xl
+  font-size: 80px
+  font-weight: 200
+  line-height: 80px
+
+hr.spacer
+  width: 100px
+  margin: 50px auto
+
 .navbar-default
   background: none
   border: none
@@ -54,6 +63,8 @@ ul
     font-size: 23px
     margin-top: 4px
     text-transform: uppercase
+  &.logo-black
+    filter: brightness(0)
 
 .list-inline li
   padding-bottom: 10px
@@ -110,7 +121,6 @@ body.devise
   background-position: center
   .logo
     margin: 50px auto
-    filter: brightness(0)
   footer
     color: black
     &:before
@@ -119,11 +129,8 @@ body.devise
 footer
   font-size: 10px
   text-align: center
-  margin: 60px 0
-  color: #ccc
-  &:before
-    content: ''
-    display: block
-    margin: 0 auto 30px auto
-    width: 100px
-    border-top: 1px solid #ccc
+  margin: 60px 0 0
+  padding: 50px 0
+  background-color: #eee
+  .logo
+    margin: 10px auto
