--- a/app/views/semesters/show.html.erb
+++ b/app/views/semesters/show.html.erb
@@ -83,12 +83,7 @@
           <a data-toggle="collapse" data-target="#collapse<%= teaching_module.id %>" class="btn btn-default btn-xs">+</a>
           <div id="collapse<%= teaching_module.id %>" class="collapse">
             <% teaching_module.involvements.each do |involvement| %>
-              <%= involvement.user %>
-              CM <%= involvement.hours_cm %>
-              TD <%= involvement.hours_td %>
-              TP <%= involvement.hours_tp %>
-              <%= "(#{involvement.description})" unless involvement.description.nil? or involvement.description.empty? %>
-              <br/>
+              <%= render 'involvements/short', involvement: involvement %><br/>
             <% end %>
           </div>
         </td>
