--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Edit', edit_user_path(@user) if can? :edit, @user %>
+<%= link_to 'Edit', edit_user_path(@user), class: 'btn btn-primary btn-xs' if can? :edit, @user %>
 
 <h2>Heures</h2>
 <p><%= @user.teacher_hours %> heures enseignant / <%= @user.hours %> heures de service</p>
