--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -27,12 +27,18 @@ hr.spacer
   background: none
   border: none
   text-transform: uppercase
-  .navbar-nav > li > a
-    color: white
-    font-size: 13px
-    font-weight: 700
-    &:hover
-      color: #eee
+  .navbar-nav 
+    > li > a
+      color: white
+      font-size: 13px
+      font-weight: 700
+      &:hover
+        color: #eee
+    > .open > a
+      background: white !important
+  .dropdown-menu
+    border: none
+    border-radius: 0
 
 .abstract 
   background: #eee
