--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -119,6 +119,8 @@ hr.spacer
     background-image: asset-url('headers/teaching_modules.jpg')
   &.users
     background-image: asset-url('headers/users.jpg')
+  &.budgets
+    background-image: asset-url('headers/budgets.jpg')
 
 body.devise
   background-size: cover
