--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,8 +43,8 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Budget <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><%= link_to 'Intervenants', users_costs_path %></li>
-                <li><%= link_to 'Modules', teaching_modules_costs_path %></li>
+                <li><%= link_to 'Intervenants', budgets_users_path %></li>
+                <li><%= link_to 'Modules', budgets_teaching_modules_path %></li>
               </ul>
             </li>
             <li class="dropdown">
