--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -122,6 +122,13 @@ hr.spacer
   &.budgets
     background-image: asset-url('headers/budgets.jpg')
 
+.panel-heading 
+  h3
+    margin: 0
+  h4
+    margin-top: 5px
+    font-weight: 200
+
 body.devise
   background-size: cover
   background-attachment: fixed
