--- a/app/views/objectives/index.html.erb
+++ b/app/views/objectives/index.html.erb
@@ -16,8 +16,8 @@
       <tr>
         <td><%= objective %></td>
         <td><%= objective.teaching_module %></td>
-        <td><%= link_to 'Show', objective %></td>
-        <td><%= link_to 'Edit', edit_objective_path(objective) if can? :edit, objective %></td>
+        <td><%= link_to 'Voir', objective %></td>
+        <td><%= link_to 'Modifier', edit_objective_path(objective) if can? :edit, objective %></td>
       </tr>
     <% end %>
   </tbody>
