--- a/app/views/teaching_units/show.html.erb
+++ b/app/views/teaching_units/show.html.erb
@@ -5,4 +5,4 @@
   <%= @teaching_unit.number %>
 </p>
 
-<%= link_to 'Edit', edit_teaching_unit_path(@teaching_unit) if can? :edit, @teaching_unit %>
+<%= link_to 'Modifier', edit_teaching_unit_path(@teaching_unit) if can? :edit, @teaching_unit %>
