--- a/app/views/involvements/show.html.erb
+++ b/app/views/involvements/show.html.erb
@@ -11,4 +11,4 @@
   Heures enseignant: <%= @involvement.teacher_hours.round %>
 </p>
 
-<%= link_to 'Edit', edit_involvement_path(@involvement) if can? :edit, @involvement %>
+<%= link_to 'Modifier', edit_involvement_path(@involvement) if can? :edit, @involvement %>
