--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,67 +11,10 @@
     <%= javascript_include_tag "application" %>
   </head>
   <body>
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <%= link_to root_path, class:'navbar-brand logo' do %>
-          <%= image_tag 'mmi-bordeaux.png' %>
-          <p>Admin</p>
-        <% end %>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to 'Admin', root_path %></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Pédagogie <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><%= link_to 'Maquette', teaching_modules_summary_path %></li>
-                <li><%= link_to 'Champs', fields_path %></li>
-                <li><%= link_to 'Projets', projects_path %></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Equipe <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><%= link_to 'Intervenants', users_path %></li>
-                <li><%= link_to 'Services', users_summary_path %></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Budget <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><%= link_to 'Intervenants', budgets_users_path %></li>
-                <li><%= link_to 'Modules', budgets_teaching_modules_path %></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PPN <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><%= link_to 'Semestres', semesters_path %></li>
-                <li><%= link_to 'Unités d\'enseignement', teaching_units_path %></li>
-                <li><%= link_to 'Sujets', teaching_subjects_path %></li>
-                <li><%= link_to 'Catégories', teaching_categories_path %></li>
-                <li><%= link_to 'Modules', teaching_modules_path %></li>
-                <li><%= link_to 'Objectifs', objectives_path %></li>
-                <li><%= link_to 'Compétences', competencies_path %></li>
-                <li><%= link_to 'Mots-clés', keywords_path %></li>
-              </ul>
-            </li>
-            <li><%= link_to('Déconnexion', destroy_user_session_path, method: :delete) %> </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="jumbotron <%= controller_name %>">
-      <div>
-        <h1><%= @title %></h1>
-        <% if @subtitle.present? %><p><%= @subtitle %></p><% end %>
-      </div>
-    </div>
+    <%= render 'application/nav' %>
+    <%= render 'application/jumbotron' %>
     <div class="container">
+      <%= render 'application/breadcrumb' %>
       <%= bootstrap_flash %>
       <%= yield %>
     </div>
