--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Edit', edit_project_path(@project) if can? :edit, @project %>
+<%= link_to 'Modifier', edit_project_path(@project) if can? :edit, @project %>
 <div class="row">
   <div class="col-md-4">
     <h2>Description</h2>
