--- a/app/views/promotions/show.html.erb
+++ b/app/views/promotions/show.html.erb
@@ -24,3 +24,49 @@
     <% end %>
   </tbody>
 </table>
+
+<% @semesters.each do |semester| %>
+  <h2><%= link_to semester, semester %></h2>
+  <p>Heures étudiant : <%= @promotion.involvements.in_semester(semester).collect(&:student_hours).sum.round %> planifiées / <%= semester.expected_student_hours.round %> PPN</p>
+  <div id="semester-<%= semester.id %>"></div></td>
+  <script type="text/javascript">
+    $(function () {
+      $('#semester-<%= semester.id %>').highcharts({
+          chart: { type: 'bar', height: 150 },
+          title: null,
+          xAxis: { categories: ['PPN', 'Planifié'], tickWidth: 0 },
+          yAxis: { min: 0, title: null },
+          tooltip: { backgroundColor: 'white', valueSuffix: ' heures' },
+          plotOptions: { series: { stacking: 'normal', dataLabels: { enabled: false } } },
+          legend: { enabled: false },
+          credits: { enabled: false },
+          series: [
+            { name: 'TP', data: [<%= @promotion.involvements.in_semester(semester).collect(&:student_hours_tp).sum %>, <%= semester.planned_student_hours_tp %>] }, 
+            { name: 'TD', data: [<%= @promotion.involvements.in_semester(semester).collect(&:student_hours_td).sum %>, <%= semester.planned_student_hours_td %>] }, 
+            { name: 'CM', data: [<%= @promotion.involvements.in_semester(semester).collect(&:student_hours_cm).sum %>, <%= semester.planned_student_hours_cm %>] }
+            ]
+      });
+  });
+  </script>
+
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Nom</th>
+        <th>Heures étudiant planifiées</th>
+        <th>Heures étudiant PPN</th>
+        <th>Variation</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% semester.teaching_modules.each do |teaching_module| %>
+        <tr>
+          <td><%= link_to teaching_module.full_name, teaching_module %></td>
+          <td><%= @promotion.involvements.where(teaching_module: teaching_module).collect(&:student_hours).sum.round %></td>
+          <td><%= teaching_module.expected_student_hours.round %></td>
+          <%= render 'application/td_percent', percent: teaching_module.student_hours_delta %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% end %>
