--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -4,7 +4,7 @@
     <p>Admin</p>
   </div>
   <p class="version">
-	  <strong>Version 1.5</strong><br/>
-    Zelda Breath Of The Wild
+	<strong>Version 1.6</strong><br/>
+    Horizon zero dawn
   </p>
 </footer>
