--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,7 +49,8 @@
       <th>Module</th>
       <th>Type</th>
       <th>Date</th>
-      <th>Durée</th>
+      <th>Heures enseignant</th>
+      <th>Heures étudiant</th>
     </tr>
   </thead>
   <tbody>
@@ -59,7 +60,8 @@
         <td><%= link_to event.teaching_module, event.teaching_module %></td>
         <td><%= event.kind.to_s.upcase %></td>
         <td><%= event.date.strftime "%d/%m/%Y" %></td>
-        <td><%= event.duration %></td>
+        <td><%= event.teacher_hours %></td>
+        <td><%= event.student_hours %></td>
       </tr>
     <% end %>
   </tbody>
